--- a/frontend/details/footer.html
+++ b/frontend/details/footer.html
@@ -1,3 +1,4 @@
-<footer class="py-3 my-4">
-    <p class="text-center text-muted">&copy; 2022 Company, Kozimov</p>
-</footer>
+      <!-- Footer-->
+      <footer class="py-5 bg-dark">
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+    </footer>
