--- a/frontend/details/footer.html
+++ b/frontend/details/footer.html
@@ -1,4 +1,4 @@
       <!-- Footer-->
       <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; 2022 by Kozimov</p></div>
     </footer>
