--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <h1 class="display-4 fw-bolder">About Page</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Home Page about Page</p>
                 </div>
             </div>
         </header>
@@ -25,6 +25,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
+                                    <hr>
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">{{ post.nomi }}</h5>
                                     <!-- Product price-->
@@ -33,7 +34,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Batafsil</a></div>
                             </div>
                         </div>
                     </div>
