--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,13 +21,13 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{{ post.rasm.url }}" alt="..." width="200" />
+                            <img class="card-img-top" src="{{ post.image.url }}" alt="..." width="200" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <hr>
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">{{ post.nomi }}</h5>
+                                    <h5 class="fw-bolder">{{ post.name }}</h5>
                                     <!-- Product price-->
                                     $40.00 - $80.00
                                 </div>
