--- a/frontend/details/navbar.html
+++ b/frontend/details/navbar.html
@@ -5,8 +5,14 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">
+                        All
+                    </a>
+                </li>
                 {% for category in categories %}
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">{{ category.nomi }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}?category={{ category.name }}">{{ category.name }}
+                </a></li>
                 {% endfor %}
             </ul>
             <form class="d-flex">
